Added Project section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>My Personal Website</title>
   </head>
   <body>
-    <h2>Time In London: <span class="time"></span></h2>
+    <h2 class="time-handle">Time In London: <span class="time"></span></h2>
     <header class="header">
       <div class="logo-box">
         <h1 class="logo">Idris Portfolio</h1>
@@ -28,7 +28,7 @@
       </div>
     </header>
 
-    <!--  -->
+    <!-- about me -->
 
     <div class="img-profile">
       <img class="round-img" src="./idris_profile.jpg" alt="" />
@@ -101,6 +101,48 @@
         </div>
       </div>
     </div>
+    <!-- projects -->
+
+    <div class="projects">
+      <h1 class="projects__heading">Projects</h1>
+      <div class="projects__source">
+        <div class="projects__links">
+          <a href="#"
+            ><img src="./photo-of-turned-on-laptop-computer-943096.jpg" alt=""
+          /></a>
+          <h2 class="projects__links-h2">Javascript</h2>
+
+          <p class="projects__links-lead">
+            I have created a few Javascript projects which i have made using
+            vanilla Javascript
+          </p>
+        </div>
+        <div class="projects__links">
+          <a href="#"
+            ><img
+              src="./person-touching-open-macbook-on-table-839465.jpg"
+              alt=""
+          /></a>
+          <h2 class="projects__links-h2">Python</h2>
+          <p class="projects__links-lead">
+            I used Python to scrape data on few sites using Beautiful soup
+            framework.
+          </p>
+        </div>
+        <div class="projects__links">
+          <a href="#"
+            ><img src="./macbook-pro-beside-spiral-notebook-669616.jpg" alt=""
+          /></a>
+          <h2 class="projects__links-h2">Data Science</h2>
+          <p class="projects__links-lead">
+            This was University project I made that predicted who is likely to
+            earn $50K in America based on a data set extracted from
+            <a href="https://www.kaggle.com/datasets">Kaggle.com</a>
+          </p>
+        </div>
+      </div>
+    </div>
+
     <!-- connections -->
     <div class="connections">
       <h1 class="connections__heading"><em>Connect</em></h1>
