ordered the folders

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./dist/css/style.css" />
     <title>My Personal Website</title>
   </head>
   <body>
@@ -108,7 +108,9 @@
       <div class="projects__source">
         <div class="projects__links">
           <a href="#"
-            ><img src="./photo-of-turned-on-laptop-computer-943096.jpg" alt=""
+            ><img
+              src="./dist/images/photo-of-turned-on-laptop-computer-943096.jpg"
+              alt=""
           /></a>
           <h2 class="projects__links-h2">Javascript</h2>
 
@@ -120,7 +122,7 @@
         <div class="projects__links">
           <a href="#"
             ><img
-              src="./person-touching-open-macbook-on-table-839465.jpg"
+              src="./dist/images/person-touching-open-macbook-on-table-839465.jpg"
               alt=""
           /></a>
           <h2 class="projects__links-h2">Python</h2>
@@ -131,7 +133,9 @@
         </div>
         <div class="projects__links">
           <a href="#"
-            ><img src="./macbook-pro-beside-spiral-notebook-669616.jpg" alt=""
+            ><img
+              src="./dist/images/macbook-pro-beside-spiral-notebook-669616.jpg"
+              alt=""
           /></a>
           <h2 class="projects__links-h2">Data Science</h2>
           <p class="projects__links-lead">
@@ -143,22 +147,6 @@
       </div>
     </div>
 
-    <!-- connections -->
-    <div class="connections">
-      <h1 class="connections__heading"><em>Connect</em></h1>
-      <div class="connections__links">
-        <a href="https://github.com/iddyboi" class="connections__link"
-          >Github</a
-        >
-        <a
-          href="https://www.linkedin.com/in/idristaiwo/"
-          class="connections__link"
-          >LinkedIn</a
-        >
-        <a href="https://twitter.com/home" class="connections__link">Twitter</a>
-      </div>
-    </div>
-
-    <script src="index.js" type="text/javascript"></script>
+    <script src="./dist/js/index.js" type="text/javascript"></script>
   </body>
 </html>
