--- a/index.html
+++ b/index.html
@@ -4,149 +4,100 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-
-    <link
-      href="https://fonts.googleapis.com/css?family=Lato&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="./dist/css/style.css" />
     <title>My Personal Website</title>
   </head>
-  <body>
-    <h2 class="time-handle">Time In London: <span class="time"></span></h2>
-    <header class="header">
-      <div class="logo-box">
-        <h1 class="logo">Idris Portfolio</h1>
+  <body class="profile__body">
+    <div class="container">
+      <div class="headernav">
+        <div class="headernav__brand">
+          <h3>Idris</h3>
+          <div class="headernav__pic">
+            <img src="../../idris_profile.jpg" alt="" />
+          </div>
+        </div>
+
+        <ul class="headernav__links">
+          <li><a href="../../index.html">Home</a></li>
+          <li><a href="#">Socials</a></li>
+        </ul>
       </div>
-      <div class="text-box">
-        <h1 class="primary-heading">
-          <span class="heading-primary-main">Idris</span>
-          <span class="heading-primary-sub">Front End Dev</span>
-        </h1>
-      </div>
-    </header>
 
-    <!-- about me -->
-
-    <div class="img-profile">
-      <img class="round-img" src="./idris_profile.jpg" alt="" />
-    </div>
-
-    <div class="about">
-      <h1 class="about__heading"><em>About Me</em></h1>
-      <div class="info">
-        <p class="about__lead">
-          I'm currently a 3rd year student at London SouthBank University
-          studying computeer science.
+      <!-- introduction -->
+      <div class="introduction">
+        <h1 class="introduction__heading">Hello There</h1>
+        <p class="introduction__lead">
+          I am a software developer<span>👨🏾‍💻</span>
         </p>
-        <p class="about__lead">
-          I have previously worked as Front-end Developer at Vantworks, who are
-          based in Old Street London aka Silicon roundabout. My tech stack were
-          HTML, Bootstrap but predominatly CSS, I also used Javascript for Form
-          validation.
-        </p>
-        <p class="about__lead">
-          I've always been drawn to the overlap between design and development.
-          My skills are broad: from ux to design, front end to back end
-          development. I enjoy each aspect, and love building sites & mobile
-          apps from start to finish, for clients all over the world.
+        <p class="introduction__sublead">
+          Looking for new ways to improve technology with Python and Javascript
         </p>
       </div>
-    </div>
-
-    <!-- skills -->
-
-    <div class="skills">
-      <h1 class="skills__heading"><em>Skills</em></h1>
-      <h4 class="skills__intro">
-        These are the skills that I have to get the job done, over time I will
-        be adding to the list but let me be a master 1st 😬
-      </h4>
-      <div class="skills__info">
-        <div class="si front-end">
-          <h3>Front-end</h3>
-          <ul>
-            <li>HTML</li>
-            <li>CSS3</li>
-            <li>JAVASCRIPT</li>
-            <li>SASS</li>
-          </ul>
-        </div>
-        <div class="si back-end">
-          <h3>Back-end</h3>
-          <ul>
-            <li>DJANGO</li>
-            <li>NODEJS</li>
-            <li>SQL</li>
-            <li>POSTGRESQL</li>
-          </ul>
-        </div>
-        <div class="si tools">
-          <h3><em>Tools</em></h3>
-          <ul>
-            <li>GIT / GITHUB</li>
-            <li>VSCODE</li>
-            <li>AWS</li>
-          </ul>
-        </div>
-        <div class="si Frameworks">
-          <h3>Frameworks / Libraries</h3>
-          <ul>
-            <li>EXPRESS JS</li>
-            <li>REACT</li>
-            <li>BOOTSTRAP</li>
-          </ul>
+      <hr class="introduction__hr" />
+      <!-- skills -->
+      <div class="soft-skills">
+        <h3 class="soft-skills__heading">Skills</h3>
+        <div class="soft-skills__content">
+          <div class="st soft-skills__description">
+            <p>
+              Software development is hard. Managing projects is hard. Working
+              remotely is hard. Here are some things I'm good at, to help ease
+              the pain.
+            </p>
+          </div>
+          <div class="st soft-skills__items">
+            <div class="item">
+              <h3>Problem solving</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae
+                alias magnam officia. Laudantium sit facere mollitia
+                reprehenderit suscipit omnis sapiente.
+              </p>
+            </div>
+            <div class="item">
+              <h3>Quick Thinker</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae
+                alias magnam officia. Laudantium sit facere mollitia
+                reprehenderit suscipit omnis sapiente.
+              </p>
+            </div>
+            <div class="item">
+              <h3>Communication</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae
+                alias magnam officia. Laudantium sit facere mollitia
+                reprehenderit suscipit omnis sapiente.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-    <!-- projects -->
 
-    <div class="projects">
-      <h1 class="projects__heading">Projects</h1>
-      <div class="projects__source">
-        <div class="projects__links">
-          <a href="#"
-            ><img
-              src="./dist/images/photo-of-turned-on-laptop-computer-943096.jpg"
-              alt=""
-          /></a>
-          <h2 class="projects__links-h2">Javascript</h2>
+      <hr />
+      <!-- contact me -->
+      <section class="contact">
+        <h3 class="soft-skills__heading">Contact Me</h3>
+        <div class="contact__details">
+          <h4>Get In Touch</h4>
+          <div class="contact__lead">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
+            accusamus beatae doloremque. Aut labore vel cupiditate inventore
+            veniam, impedit, magnam velit molestiae quaerat iste quibusdam
+            incidunt nemo repellat voluptatum non quas. Necessitatibus quidem
+            ea, qui cupiditate nesciunt eos possimus non a error ipsam,
+            doloribus ipsa, recusandae neque commodi deserunt harum!
+          </div>
+          <a href="mailto:idrist2013@gmail.com" class="email"
+            >Idrist2013@gmail.com</a
+          >
+        </div>
+      </section>
 
-          <p class="projects__links-lead">
-            I have created a few Javascript projects which i have made using
-            vanilla Javascript
-          </p>
-        </div>
-        <div class="projects__links">
-          <a href="#"
-            ><img
-              src="./dist/images/person-touching-open-macbook-on-table-839465.jpg"
-              alt=""
-          /></a>
-          <h2 class="projects__links-h2">Python</h2>
-          <p class="projects__links-lead">
-            I used Python to scrape data on few sites using Beautiful soup
-            framework.
-          </p>
-        </div>
-        <div class="projects__links">
-          <a href="#"
-            ><img
-              src="./dist/images/macbook-pro-beside-spiral-notebook-669616.jpg"
-              alt=""
-          /></a>
-          <h2 class="projects__links-h2">Data Science</h2>
-          <p class="projects__links-lead">
-            This was University project I made that predicted who is likely to
-            earn $50K in America based on a data set extracted from
-            <a href="https://www.kaggle.com/datasets">Kaggle.com</a>
-          </p>
-        </div>
-      </div>
+      <hr />
+      <!-- end of container -->
     </div>
 
-    <script src="./dist/js/index.js" type="text/javascript"></script>
+    <script src="./api.js"></script>
   </body>
 </html>
