created holiday html with grid

--- a/index.html
+++ b/index.html
@@ -49,25 +49,29 @@
             <div class="item">
               <h3>Problem solving</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae
-                alias magnam officia. Laudantium sit facere mollitia
-                reprehenderit suscipit omnis sapiente.
+                I am a person who takes a big picture and dissects it into small
+                segments to achieve the goal. I also like to put some
+                imagination into what I tend to solve and other techniques I can
+                use for the best output.
               </p>
             </div>
             <div class="item">
               <h3>Quick Thinker</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae
-                alias magnam officia. Laudantium sit facere mollitia
-                reprehenderit suscipit omnis sapiente.
+                Becoming a quick thinker is not always the best tool as we all
+                need to make sure we produce the best work we can. But where I
+                utilise this skills is when learning new things, once I learned
+                Javascript I could grasp ES6 easy.
               </p>
             </div>
             <div class="item">
               <h3>Communication</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae
-                alias magnam officia. Laudantium sit facere mollitia
-                reprehenderit suscipit omnis sapiente.
+                Some people think that coding is a one mans jobs, well i don't
+                think so, for a team to progress they need to work with one
+                another. I wouldn't say my graphic skills are up there but
+                working with a graphic designer and communicating on how to work
+                within a project can help.
               </p>
             </div>
           </div>
@@ -81,12 +85,12 @@
         <div class="contact__details">
           <h4>Get In Touch</h4>
           <div class="contact__lead">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
-            accusamus beatae doloremque. Aut labore vel cupiditate inventore
-            veniam, impedit, magnam velit molestiae quaerat iste quibusdam
-            incidunt nemo repellat voluptatum non quas. Necessitatibus quidem
-            ea, qui cupiditate nesciunt eos possimus non a error ipsam,
-            doloribus ipsa, recusandae neque commodi deserunt harum!
+            If you need help with building a responsive website you can get in
+            touch with me. I have 2 years experience with HTML, CSS3, SCSS and
+            Javascript. If frameworks and libraries are your thing I have
+            experience in ReactJs, I also work on back end technologies such as
+            Nodejs with Express as the framework...oh yh and dont forget
+            databases, I use mySQL if thats what you need.😬
           </div>
           <a href="mailto:idrist2013@gmail.com" class="email"
             >Idrist2013@gmail.com</a
