--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <ul class="headernav__links">
           <li><a href="../../index.html">Home</a></li>
-          <li><a href="#">Socials</a></li>
+          <li><a href="./dist/pages/holidays.html">Holidays</a></li>
         </ul>
       </div>
 
